redefined locaiton of html files for topnav bar

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="/">home</a>
-            <a href="/publications">publications</a>
-            <a href="/code">code</a>
-            <a href="/cv">cv</a>
-            <a href="/gallery">photography</a>
-            <a href="/resources">resources</a>
+            <a href="templates/homepage.html">home</a>
+            <a href="templates/publications.html">publications</a>
+            <a href="templates/code.html">code</a>
+            <a href="templates/cv.html">cv</a>
+            <a href="templates/gallery.html">photography</a>
+            <a href="templates/resources.html">resources</a>
         </div>
         <div>
             {% block content %} {% endblock %}
