moved all files to top level

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="templates/homepage.html">home</a>
-            <a href="templates/publications.html">publications</a>
-            <a href="templates/code.html">code</a>
-            <a href="templates/cv.html">cv</a>
-            <a href="templates/gallery.html">photography</a>
-            <a href="templates/resources.html">resources</a>
+            <a href="homepage.html">home</a>
+            <a href="publications.html">publications</a>
+            <a href="code.html">code</a>
+            <a href="cv.html">cv</a>
+            <a href="gallery.html">photography</a>
+            <a href="resources.html">resources</a>
         </div>
         <div>
             {% block content %} {% endblock %}
