--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="index.html">home</a>
+            <a href="index.html">home</a>
             <a href="publications.html">publications</a>
             <a href="code.html">code</a>
             <a href="cv.html">cv</a>
