--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dan</title>
+        <title>dan</title>
         <!--            STYLE TAGS -->
         <!--    keep style tags in the head
                 classes start with .
