--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello</title>
+        <title>dan</title>
         <!--            STYLE TAGS -->
         <!--    keep style tags in the head
                 classes start with .
@@ -13,7 +13,7 @@
     </head>
     <body class="bodyLob">
         <div class="topnav">
-            <a class="active" href="index.html">home</a>
+            <a href="index.html">home</a>
             <a href="publications.html">publications</a>
             <a href="code.html">code</a>
             <a href="cv.html">cv</a>
