--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="style.css"/>
         <script src="logic.jss"></script>
     </head>
-    <body class="bodyLob">
+    <body class="body">
         <div class="topnav">
             <a href="index.html">home</a>
             <a href="publications.html">publications</a>
