--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>code</title>
+        <title>dan</title>
         <!--            STYLE TAGS -->
         <!--    keep style tags in the head
                 classes start with .
@@ -11,9 +11,9 @@
         <link rel="stylesheet" href="style.css"/>
         <script src="logic.jss"></script>
     </head>
-    <body class="bodyLob">
+    <body class="body">
         <div class="topnav">
-            <a class="active" href="index.html">home</a>
+            <a href="index.html">home</a>
             <a href="publications.html">publications</a>
             <a href="code.html">code</a>
             <a href="cv.html">cv</a>
