--- a/cv.html
+++ b/cv.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <title>
-            Lobster Facts
+            dan
         </title>
         <link rel="stylesheet" href="style.css"/>
 
     </head>
 
-    <body class="bodyLob">
+    <body class="body">
         <div class="topnav">
-            <a class="active" href="index.html">home</a>
+            <a href="index.html">home</a>
             <a href="publications.html">publications</a>
             <a href="code.html">code</a>
             <a href="cv.html">cv</a>
