--- a/resources.html
+++ b/resources.html
@@ -1,11 +1,39 @@
-<h1>my resources.</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>dan</title>
+        <!--            STYLE TAGS -->
+        <!--    keep style tags in the head
+                classes start with .
+                ids start with #
+                Typically things are styled with classes
+                and ids are used for very specific things, they can get complicated -->
+        <link rel="stylesheet" href="style.css"/>
+        <script src="logic.jss"></script>
+    </head>
+    <body>
+        <div class="topnav">
+            <a href="index.html">home</a>
+            <a href="publications.html">publications</a>
+            <a href="code.html">code</a>
+            <a href="cv.html">cv</a>
+            <a href="gallery.html">photography</a>
+            <!-- Photography tab? That would be cool -->
+        </div>
+        <div>
+            <!-- Keep the colour backgroud? -->
+            <!-- What theme do you want? -->
+            <!-- Maybe browse some sites that give html templates -->
+            <h1>my resources.</h1>
 
-<p>below is a list of resources that i have put together based upon the work i have done.</p>
-
-<p>
-<a href="/resources/smoothed-particle-hydrodynamics">smoothed particle hydrodynamics</a>
-</p>
-
-<p>
-<a href="/resources/numerical-methods">numerical methods</a>
-</p>
+            <p>below is a list of resources that i have put together based upon the work i have done.</p>
+            
+            <p>
+            <a href="/resources/smoothed-particle-hydrodynamics.html">smoothed particle hydrodynamics</a>
+            </p>
+            
+            <p>
+            <a href="/resources/numerical-methods.html">numerical methods</a>
+            </p>
+    </body>
+</html>
