--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,7 @@
             <a href="code.html">code</a>
             <a href="cv.html">cv</a>
             <a href="gallery.html">photography</a>
+            <a href="resources.html">resources</a>
         </div>
         <div>
 
