--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,7 @@
             <p>below is a list of resources that i have put together based upon the work i have done.</p>
             
             <p>
-            <a href="/resources/smoothed-particle-hydrodynamics.html">smoothed particle hydrodynamics</a>
+            <a href="/resources/sph.html">smoothed particle hydrodynamics</a>
             </p>
             
             <p>
