--- a/resources/numerical-methods.html
+++ b/resources/numerical-methods.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dan</title>
+        <title>dan</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, inital-scale=1"/>
-        <link rel="stylesheet" href="/static/style.css"/>
+        <link rel="stylesheet" href="style.css"/>
         <script src="/static/logic.js"></script>
         <script>
             MathJax = {
