--- a/resources/sph.html
+++ b/resources/sph.html
@@ -27,11 +27,11 @@
     <body>
         <div class="topnav">
             <a href="/">home</a>
-            <a href="publications.html">publications</a>
-            <a href="code.html">code</a>
-            <a href="cv.html">cv</a>
-            <a href="gallery.html">photography</a>
-            <a href="resources.html">resources</a>
+            <a href="/publications.html">publications</a>
+            <a href="/code.html">code</a>
+            <a href="/cv.html">cv</a>
+            <a href="/gallery.html">photography</a>
+            <a href="/resources.html">resources</a>
         </div>
         <div>
             <h1>smoothed particle hydrodynamics.</h1>
