--- a/resources/sph.html
+++ b/resources/sph.html
@@ -4,7 +4,7 @@
         <title>dan</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, inital-scale=1"/>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="/style.css"/>
         <script src="/static/logic.js"></script>
         <script>
             MathJax = {
