--- a/resources/numerical-methods.html
+++ b/resources/numerical-methods.html
@@ -4,8 +4,8 @@
         <title>dan</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, inital-scale=1"/>
-        <link rel="stylesheet" href="style.css"/>
-        <script src="/static/logic.js"></script>
+        <link rel="stylesheet" href="/style.css"/>
+        <script src="/logic.js"></script>
         <script>
             MathJax = {
               tex: {
@@ -27,11 +27,11 @@
     <body>
         <div class="topnav">
             <a href="/">home</a>
-            <a href="publications.html">publications</a>
-            <a href="code.html">code</a>
-            <a href="cv.html">cv</a>
-            <a href="gallery.html">photography</a>
-            <a href="resources.html">resources</a>
+            <a href="/publications.html">publications</a>
+            <a href="/code.html">code</a>
+            <a href="/cv.html">cv</a>
+            <a href="/gallery.html">photography</a>
+            <a href="/resources.html">resources</a>
         </div>
         <div>
             <h1>under construction.</h1>
