--- a/gallery.html
+++ b/gallery.html
@@ -25,17 +25,7 @@
         </div>
         <div id="gallery">
   
-            <img src="images/image-001.jpeg">
-            <img src="images/image-002.jpeg">
-            <img src="images/image-003.jpeg">
-            <img src="images/image-004.jpeg">
-            <img src="images/image-005.jpeg">
-            <img src="images/image-006.jpeg">
-            <img src="images/image-006.jpeg">
-            <img src="images/image-007.jpeg">
-            <img src="images/image-008.jpeg">
-            <img src="images/image-009.jpeg">
-            <img src="images/image-010.jpeg">
+            <h1>under construciton.</h1>
 
         </div>
 
