--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
             <a href="resources.html">resources</a>
             <!-- Photography tab? That would be cool -->
         </div>
+        <nav role="navigation">
+            <div class="menuToggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul class="menu">
+                    <a href="/"><li>home</li></a>
+                    <a href="/publications"><li>publications</li></a>
+                    <a href="/code"><li>code</li></a>
+                    <a href="/cv"><li>cv</li></a>
+                    <a href="/gallery"><li>photography</li></a>
+                    <a href="/resources"><li>resources</li></a>
+                </ul>
+            </div>
+        </nav>
         <div>
             <!-- Keep the colour backgroud? -->
             <!-- What theme do you want? -->
