--- a/publications.html
+++ b/publications.html
@@ -20,6 +20,22 @@
             <a href="gallery.html">photography</a>
             <a href="resources.html">resources</a>
         </div>
+        <nav role="navigation">
+            <div class="menuToggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul class="menu">
+                    <a href="/"><li>home</li></a>
+                    <a href="/publications"><li>publications</li></a>
+                    <a href="/code"><li>code</li></a>
+                    <a href="/cv"><li>cv</li></a>
+                    <a href="/gallery"><li>photography</li></a>
+                    <a href="/resources"><li>resources</li></a>
+                </ul>
+            </div>
+        </nav>
         <h1>my science.</h1>
 
         <p>below is a list of peer-reviewed articles on which i have been an author.</p>
