--- a/gallery.html
+++ b/gallery.html
@@ -20,9 +20,22 @@
             <a href="gallery.html">photography</a>
             <a href="resources.html">resources</a>
         </div>
-        <div>
-
-        </div>
+        <nav role="navigation">
+            <div class="menuToggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul class="menu">
+                    <a href="/"><li>home</li></a>
+                    <a href="/publications"><li>publications</li></a>
+                    <a href="/code"><li>code</li></a>
+                    <a href="/cv"><li>cv</li></a>
+                    <a href="/gallery"><li>photography</li></a>
+                    <a href="/resources"><li>resources</li></a>
+                </ul>
+            </div>
+        </nav>
         <h1>under construciton.</h1>
         <div id="gallery">
 
