--- a/code.html
+++ b/code.html
@@ -36,6 +36,7 @@
                 </ul>
             </div>
         </nav>
+        <div>
         <h1><span>selected code projects</span></h1>
         <ul>
             <li><span>summary of coding experience</span></li>
@@ -63,5 +64,6 @@
             <li><span>want in include animations from simulations that I have done, in built player?</span></li>
             <li><span>Personal projects?</span></li>
         </ul>
+        </div>
     </body>
 </html>
