--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,9 @@
                 </ul>
             </div>
         </nav>
+        <div>
         <h1>under construciton.</h1>
+        </div>
         <div id="gallery">
 
 
