--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,7 @@
                 </ul>
             </div>
         </nav>
+        <div>
         <h1>my science.</h1>
 
         <p>below is a list of peer-reviewed articles on which i have been an author.</p>
@@ -65,5 +66,6 @@
         elsender &amp; bate<br>
         <a href="https://arXiv.org/abs/2110.05501" target="_blank" rel="noopener noreferrer">arxiv</a> | <a href="https://doi.org/10.1093/mnras/stab2901" target="_blank" rel="noopener noreferrer">publisher</a>
         </p>
+        </div>
     </body>
 </html>
