--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <script src="logic.jss"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script>
-             if (onload="mobileCheck()" == true) {
-                $("nav").addClass("menuToggle");
+            if (onload="mobileCheck()" == true) {
+                $('.topnav').hide();
             } else {
-                $("nav").addClass("topnav");
+                $('.menuToggle').hide();
             }
         </script>
     </head>
