--- a/code.html
+++ b/code.html
@@ -37,7 +37,8 @@
             </div>
         </nav>
         <div>
-            <h1><span>selected code projects</span></h1>
+            <h1><span>under construction.</span></h1>
+<!--             <h1><span>selected code projects</span></h1>
             <ul>
                 <li><span>summary of coding experience</span></li>
                 <ul>
@@ -52,7 +53,7 @@
                         <li><span>data visualisation</span></li>
                     </ul>
                     <li><span>methods</span></li>
-                    <ul>
+                    <ul> 
                         <li><span>sph</span></li>
                         <li><span>implicit sovlers</span></li>
                     </ul>
@@ -63,7 +64,7 @@
                 </ul>
                 <li><span>want in include animations from simulations that I have done, in built player?</span></li>
                 <li><span>Personal projects?</span></li>
-            </ul>
+            </ul> -->
         </div>
     </body>
 </html>
