added asset dir for images and added first image to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -40,8 +40,7 @@
         <h1>under construciton.</h1>
         </div>
         <div id="gallery">
-
-
+         <img src="assets/images/forests_2001.pdf" alt="forests_2001" style="width:100%">
         </div>
 
     </body>
