changed top nav photography'' -> gallery'', added more images to gallery and edited the gallery element to have 3 columns rather than 5

--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
                     <a href="/publications"><li>publications</li></a>
                     <a href="/code"><li>code</li></a>
                     <a href="/cv"><li>cv</li></a>
-                    <a href="/gallery"><li>photography</li></a>
+                    <a href="/gallery"><li>gallery</li></a>
                     <a href="/resources"><li>resources</li></a>
                 </ul>
             </div>
@@ -41,6 +41,8 @@
         </div>
         <div id="gallery">
          <img src="assets/images/forests_2001.pdf" alt="forests_2001" style="width:100%">
+         <img src="assets/images/uk_basins.pdf" alt="forests_2002" style="width:100%">
+         <img src="assets/images/vegetation.gif" alt="forests_2003" style="width:100%">
         </div>
 
     </body>
