--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
             <a href="publications.html">publications</a>
             <a href="code.html">code</a>
             <a href="cv.html">cv</a>
-            <a href="gallery.html">photography</a>
+            <a href="gallery.html">gallery</a>
             <a href="resources.html">resources</a>
         </div>
         <nav role="navigation">
