updated nv menu photography'' -> gallery''

--- a/resources.html
+++ b/resources.html
@@ -32,7 +32,7 @@
                     <a href="/publications"><li>publications</li></a>
                     <a href="/code"><li>code</li></a>
                     <a href="/cv"><li>cv</li></a>
-                    <a href="/gallery"><li>photography</li></a>
+                    <a href="/gallery"><li>gallery</li></a>
                     <a href="/resources"><li>resources</li></a>
                 </ul>
             </div>
