updated image alt text

--- a/gallery.html
+++ b/gallery.html
@@ -40,9 +40,9 @@
         <h1>under construciton.</h1>
         </div>
         <div id="gallery">
-         <img src="assets/images/forests_2001.pdf" alt="forests_2001" style="width:100%">
-         <img src="assets/images/uk_basins.pdf" alt="forests_2002" style="width:100%">
-         <img src="assets/images/vegetation_test.gif" alt="forests_2003" style="width:100%">
+         <img src="assets/images/forests_2001.pdf" alt="Global forest coverage 2001, NEO data" style="width:100%">
+         <img src="assets/images/uk_basins.pdf" alt="UK river basins overlaid, in black, on topography of UK" style="width:100%">
+         <img src="assets/images/vegetation_test.gif" alt="Global vegetation coverage 2000-2024, NEO date" style="width:100%">
         </div>
 
     </body>
