added link to GH profile in code section

--- a/code.html
+++ b/code.html
@@ -38,6 +38,7 @@
         </nav>
         <div>
             <h1><span>under construction.</span></h1>
+            <p>in the meantime check out my github repos <a href="https://github.com/danelsender">here.</a></p>
 <!--             <h1><span>selected code projects</span></h1>
             <ul>
                 <li><span>summary of coding experience</span></li>
